# Generated by Django 5.2.9 on 2026-05-16 00:00

from django.db import migrations
from django.db import models


def migrate_usersettings_to_preferences(apps, _schema_editor):
    UserSettings = apps.get_model("users", "UserSettings")
    UserSitePreferences = apps.get_model("users", "UserSitePreferences")

    for settings in UserSettings.objects.all():
        preferences, _ = UserSitePreferences.objects.get_or_create(user_id=settings.user_id)
        preferences.profile_picture = settings.profile_picture
        preferences.receive_notifications = settings.receive_notifications
        preferences.save(update_fields=["profile_picture", "receive_notifications"])


class Migration(migrations.Migration):
    dependencies = [
        ("users", "0014_usersitepreferences_preferred_tags"),
    ]

    operations = [
        migrations.AddField(
            model_name="usersitepreferences",
            name="profile_picture",
            field=models.ImageField(blank=True, null=True, upload_to="profile_pictures/"),
        ),
        migrations.AddField(
            model_name="usersitepreferences",
            name="receive_notifications",
            field=models.BooleanField(default=True),
        ),
        migrations.RunPython(migrate_usersettings_to_preferences, migrations.RunPython.noop),
        migrations.DeleteModel(
            name="UserSettings",
        ),
    ]
